<resources>
    <string name="app_name">LabMate</string>
    <string name="author">App by Sakindu Dinsara</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="signin_button_text">Sign In</string>
    <string name="request_equipment">Borrow Equipment</string>
    <string name="physics_lab_equipment_overview">Physics Lab Equipment Overview</string>
    <string name="dashboard">Dashboard</string>
    <string name="request_form">Request Form</string>
    <string name="create_account">Create Account</string>
    <string name="register_to_access_labmate">Register to access LabMate</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="fill_the_form_to_borrow_lab_equipments">Fill the form to borrow lab equipment</string>
    <string name="select_role">Select Role</string>
    <string name="return_equipment">Return Equipment</string>
    <string name="inventory_manage">Manage Inventory</string>
    <string name="clear_form">Clear</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="under_construction">Under Construction</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="manage_users">Manage Users</string>
    <string name="add_laboratory">Add Laboratory</string>
    <string name="physics_laboratory_overview">Physics Laboratory Overview</string>
    <string name="edit_lab">Edit Lab</string>
    <string name="add_lab_to_the_department">Add Lab to the Department</string>
    <string name="lab_name">Lab Name</string>
    <string name="person_in_charge">Person In Charge</string>
    <string name="select_location">Select Location</string>
    <string name="edit_laboratory">Edit Laboratory</string>
    <string name="edit_equipment">Edit Equipment</string>
    <string name="equipments">Equipments</string>
    <string name="add_equipment">Add Equipment</string>
    <string name="add_equipment_to_the_department">Add Equipment to the Department</string>
    <string name="equipment_name">Equipment Name</string>
    <string name="select_laboratory">Select Laboratory</string>
    <string name="select_equipment_type">Select Equipment Type</string>
    <string name="select_state">Select State</string>
    <string name="under_maintenance">Under Maintenance</string>
    <string name="borrowed">Borrowed</string>
    <string name="in_lab">In Lab</string>
    <string name="removed">Removed</string>
    <string name="update_department_laboratory">Update Department Laboratory</string>
    <string name="update_laboratory_equipments">Update Laboratory Equipment</string>
    <string name="delete_laboratory">Delete Laboratory</string>
    <string name="delete_equipment">Delete Equipment</string>
    <string name="equipment_qr_id">Equipment QR ID</string>
    <string name="equipment_model">Equipment Model</string>
    <string name="borrow_equipment">Borrow Equipment</string>
    <string name="scan_qr">Scan QR</string>
    <string name="remove_equipment">Remove Equipment</string>
    <string name="enter_equipment_id_to_borrow_lab_equipments">Enter Equipment ID to Borrow LAB Equipments</string>
    <string name="enter_equipment_id_to_remove_the_lab_equipment">Enter Equipment ID to Remove the LAB Equipment</string>
    <string name="search_equipment">Search Equipment</string>
    <string name="select_equipment">Select Equipment</string>
    <string name="search_user">Search User</string>
    <string name="borrowing_requests">Borrowing Requests</string>
    <string name="borrowing_history">Borrowing History</string>
    <string name="no_borrowing_history_found">No borrowing history found.</string>
    <string name="reserved">Reserved</string>
</resources>