<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:fillViewport="true"
    android:id="@+id/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Header Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_equipment"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_equipment_to_the_department"
            android:textSize="14sp"
            android:textColor="@color/text_secondary"
            android:layout_marginBottom="20dp"/>

        <!-- Lab Name -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/equipment_name"
            android:layout_marginBottom="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/equipmentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:textColor="@color/text_primary"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Lab Name -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Equipment Model"
            android:layout_marginBottom="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/equipmentModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:textColor="@color/text_primary"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilType"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/select_equipment_type">

            <AutoCompleteTextView
                android:id="@+id/actType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/text_primary"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLab"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/select_laboratory">

            <AutoCompleteTextView
                android:id="@+id/actLab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/text_primary"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilState"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/select_state">

            <AutoCompleteTextView
                android:id="@+id/actState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/text_primary"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <!-- Clear Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_form"
                android:textSize="15sp"
                android:textColor="@color/danger"
                app:backgroundTint="@color/button_secondary"
                app:strokeColor="@color/danger"
                app:cornerRadius="14dp"
                app:strokeWidth="1dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp"/>

            <!-- Add Lab Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_equipment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_equipment"
                android:textSize="16sp"
                android:textColor="@color/button_text"
                app:backgroundTint="@color/button_primary"
                app:cornerRadius="14dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/equipmentQR"
            android:layout_width="180dp"
            android:layout_height="180dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/equipmentIdText"/>

    </LinearLayout>

</ScrollView>